KD - Fix overflow

--- a/riftbound-draft/css/style.scss
+++ b/riftbound-draft/css/style.scss
@@ -181,7 +181,7 @@ button:disabled {
 
 .card {
 	position: relative;
-	max-width: 250px;
+	max-width: 200px;
 	img {
 		max-width: 100%;
 		overflow: hidden;
